test_outputs/connlist/exposure_test_with_anp_12_exposure_output.txt
0.0.0.0-255.255.255.255[External] => hello-world/workload-a[Deployment] : All Connections
0.0.0.0-255.255.255.255[External] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment] : All Connections

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	=> 	entire-cluster : SCTP 1-65535,TCP 1-9089,9091-65535,UDP 1-65535
hello-world/workload-a[Deployment] 	=> 	hello-world/[all pods] : All Connections
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	<= 	entire-cluster : SCTP 1-65535,TCP 1-9089,9091-65535,UDP 1-65535
hello-world/workload-a[Deployment] 	<= 	hello-world/[all pods] : All Connections
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/workload-b[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Ingress
